--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "react-dom": "^15.5.4",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
-    "react-transition-group": "^1.1.3"
+    "react-transition-group": "^1.1.3",
+    "spectacle": "^2.0.0",
+    "spectacle-terminal": "^0.3.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.0.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "simple-git": "^1.72.0"
   },
   "scripts": {
     "start": "npm-run-all --parallel start:react start:styles",
@@ -21,6 +24,7 @@
     "build": "npm-run-all --parallel build:react build:styles",
     "build:react": "react-scripts build",
     "build:styles": "(cd styles && npm run build)",
+    "deploy": "node deploy.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
