--- a/styles/package.json
+++ b/styles/package.json
@@ -14,5 +14,9 @@
     "bootswatch": "^3.3.7",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.5.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
